Avoid erroneous white space when there are no altmetrics in the metrics section
https://github.com/elifesciences/enhanced-preprints-issues/issues/1266

--- a/src/components/atoms/metrics/metrics.scss
+++ b/src/components/atoms/metrics/metrics.scss
@@ -67,3 +67,7 @@
     }
   }
 }
+
+.altmetric-embed:empty {
+  display: none;
+}
